@@ -7,6 +7,10 @@ extern "C" {
     fn kernaux_utoa10(value: u64, buffer: *mut c_char);
     #[cfg(test)]
     fn kernaux_itoa10(value: i64, buffer: *mut c_char);
+    #[cfg(test)]
+    fn kernaux_utoa16(value: u64, buffer: *mut c_char);
+    #[cfg(test)]
+    fn kernaux_itoa16(value: i64, buffer: *mut c_char);
 }
 
 #[cfg(test)]
@@ -34,6 +38,30 @@ mod tests {
 
         let mut buffer: [i8; 1000] = [0; 1000];
         unsafe { kernaux_itoa10(-123, buffer.as_mut_ptr()) };
+        let result =
+            unsafe { CStr::from_ptr(buffer.as_ptr()) }.to_str().unwrap();
+        assert_eq!(result, "-123");
+    }
+
+    #[test]
+    fn utoa16() {
+        let mut buffer: [i8; 1000] = [0; 1000];
+        unsafe { kernaux_utoa16(0x123, buffer.as_mut_ptr()) };
+        let result =
+            unsafe { CStr::from_ptr(buffer.as_ptr()) }.to_str().unwrap();
+        assert_eq!(result, "123");
+    }
+
+    #[test]
+    fn itoa16() {
+        let mut buffer: [i8; 1000] = [0; 1000];
+        unsafe { kernaux_itoa16(0x123, buffer.as_mut_ptr()) };
+        let result =
+            unsafe { CStr::from_ptr(buffer.as_ptr()) }.to_str().unwrap();
+        assert_eq!(result, "123");
+
+        let mut buffer: [i8; 1000] = [0; 1000];
+        unsafe { kernaux_itoa16(-0x123, buffer.as_mut_ptr()) };
         let result =
             unsafe { CStr::from_ptr(buffer.as_ptr()) }.to_str().unwrap();
         assert_eq!(result, "-123");
